# AkujobiP1Shell

./: .gitignore  QUICK_DEMO.sh  README.md  TOOLS_DISCLOSURE.md  activate.sh  akujobip1.yaml  exp_exit.txt  out_empty_then_exit.txt  out_unknown.txt  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: README.md  ci.yml
docs/: DEMO_GUIDE.md  INDEX.md  NEXT_STEPS.md  changelog.md  report.md
docs/demo_checklist/: PROFESSOR_REVIEW_CHECKLIST.md
docs/diagrams/: README.md  architecture.md  config_loading.md  data_flow.md  syscall_flow.md
docs/planning/: PROJECT_PLAN_SUMMARY.md  core_req.md  implementation_checklist.md  phase2_3_implementation_plan.md  phase2_4_implementation_plan.md  phase2_4_summary.md  requirements.md  requirements_analysis.md  technical_specification.md  technical_speciifcation.md
docs/reviews/: EXECUTIVE_BRIEFING.md  REVIEW_INDEX.md  phase1_installation_review.md  phase2_1_config_review.md
docs/reviews/phase2_1_review/: PHASE_2_1_REVIEW.md  REVIEW_SUMMARY.md
docs/reviews/phase2_2_review/: APPROVAL_NOTICE.md  PHASE_2_2_REVIEW.md  REVIEW_SUMMARY.md
docs/reviews/phase2_3_review/: APPROVAL_NOTICE.md  PHASE_2_3_REVIEW.md  REVIEW_SUMMARY.md
examples/: QUICK_REFERENCE.md  USAGE_GUIDE.md  config.yaml  custom_config.yaml  minimal_config.yaml  quiet_config.yaml  sample_session.txt  verbose_config.yaml
src/akujobip1/: __init__.py  __main__.py  builtins.py  config.py  executor.py  parser.py  shell.py
tests/: run_tests.sh  test_builtins.py  test_config.py  test_executor.py  test_main.py  test_parser.py  test_shell.py
(+20 files in other folders)
